云南2g，3g呼叫信令、短信信令转换为4g s1-mme格式

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.asiainfo.stream</groupId>
     <artifactId>KafkaSinkByAsiainfo</artifactId>
-    <version>1.0</version>
+    <version>1.4-timestamp</version>
     <dependencies>
 
         <dependency>
